FBINTF Change Log  version          (1.2-0 Build 12520) Fri, 19 Feb 2021 13:27:23 +0000

1. Imported (Firebird) constants updated for Firebird 4.

2. Firebird.pas from Firebird 4 integrated into source code tree.

3. Added Support for TIMETAMP WITH TIME ZONE and TIME WITH TIME ZONE data types.

4. Added Support for SQL_DEC16, SQL_DEC34 and extended NUMERIC precision.

5. New unit 'FBClientLib.pas' added and provides new interface IFBIMasterProvider.
   QueryInterface may be used to coerce this interface from IFirebirdAPI. The
   interface provides a single method "function GetIMasterIntf: IMaster". This provides
   type safe access to the Firebird IMaster interface and avoids the need to turn
   off object checks when coercing "function GetIMaster: TObject" to IMaster.

6. New IFirebirdAPI Calls:
    function HasLocalTZDB: boolean;
    function HasTimeZoneSupport: boolean;
    function HasExtendedTZSupport: boolean;
    procedure SQLDecFloatEncode(aValue: tBCD; SQLType: cardinal; bufptr: PByte);
    function SQLDecFloatDecode(SQLType: cardinal; scale: integer; bufptr: PByte): tBCD;

7. New IAttachment Calls:
    function HasDecFloatSupport: boolean;
    function GetTimeZoneServices: ITimeZoneServices;
    function HasTimeZoneSupport: boolean;

8. New Interface ITimeZoneServices.

9. New ISQLData API Calls:
    procedure GetAsDateTime(var aDateTime: TDateTime; var dstOffset: smallint; var aTimezoneID: TFBTimeZoneID); overload;
    procedure GetAsDateTime(var aDateTime: TDateTime; var dstOffset: smallint; var aTimezone: AnsiString); overload;
    procedure GetAsTime(var aTime: TDateTime; var dstOffset: smallint; var aTimezoneID: TFBTimeZoneID; OnDate: TDateTime); overload;
    procedure GetAsTime(var aTime: TDateTime; var dstOffset: smallint; var aTimezone: AnsiString; OnDate: TDateTime); overload;
    function GetAsUTCDateTime: TDateTime;
    function GetAsBCD: tBCD;

10. New ISQLParam API Calls