@@ -1,3 +1,8 @@
+FBINTF Change Log  version          (1.2-1 Build 12520) Fri, 19 Feb 2021 13:27:23 +0000
+
+1. Big fix for Firebird 4.0. A internal change in Firebird 4.0.0 from RC1 flushed out a 
+   typo in FB30Statement.pas that caused an unknown parameter error.
+
 FBINTF Change Log  version          (1.2-0 Build 12520) Fri, 19 Feb 2021 13:27:23 +0000
 
 1. Imported (Firebird) constants updated for Firebird 4.
